[tool.poetry]
name = "demo-project"
version = "0.1.0"
description = ""
authors = ["Marvakh Mark <mmarvakh@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
flask = "1.1.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
flask-sqlalchemy = "^2.4.4"
flake8 = "^3.8.3"
tortoise = "^0.1.1"
asyncio = "^3.4.3"
aiohttp = "^3.6.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
